--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "datatables.net": "^1.10.19",
     "datatables.net-bs4": "^1.10.19",
     "jquery": "^3.3.1",
+    "jquery.alphanum": "^1.0.26",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
@@ -48,6 +49,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
+    "standard": "^11.0.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
