--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "styles": [
               "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/fontawesome.css",
               "src/styles.css"
             ],
             "scripts": [
