--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@fortawesome/fontawesome-free": "^5.1.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
